Fix button visibility on profile

--- a/kemenu-frontend/src/app/components/profile/profile.component.css
+++ b/kemenu-frontend/src/app/components/profile/profile.component.css
@@ -21,11 +21,6 @@
     }
   }  
 
-.profile-button {
-  opacity: 75%;
-
-}
-
 .btn {
   width: 100%;
 }
